# daft

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CNAME  Dockerfile  HISTORY.rst  LICENSE.rst  MANIFEST.in  README.rst  daft.py  dev-requirements.txt  examples.ipynb  index.html  index.ipynb  objects.inv  pyproject.toml  release.md  searchindex.js  setup.py
.github/workflows/: tests.yml
_sources/: api.txt  index.txt  installation.txt
_sources/examples/: classic.txt  index.txt  mrf.txt  nocircles.txt  nogray.txt
_static/: code.css  daft.css  dfm.css
api/: index.html
docs/: .gitignore  Makefile  conf.py  examples.info  gen_example.py  index.rst
docs/_static/: examples.js  examples.json
docs/examples/: astronomy.md  astronomy.rst  badfont.md  badfont.rst  classic.md  classic.rst  deconvolution.md  deconvolution.rst  exoplanets.md  exoplanets.rst  fixed.md  fixed.rst  index.rst  mrf.md  mrf.rst  nocircles.md  (+9 more)
examples/: Makefile  abc.py  astronomy.py  badfont.py  bca.py  brewer.py  classic.ipynb  classic.py  deconvolution.py  examples.ipynb  exoplanets.py  fixed.py  gaia.py  galex.py  hayabusa.py  huey_p_newton.py  index.html  logo.py  mrf.py  nocircles.py  nogray.py  recursive.py  stochastic.py  thicklines.py  weaklensing.py  wordy.py  xdqso.py  xdstars.py  yike.py
genindex/: index.html
images/: favicon.py  logo.py
installation/: index.html
old/: index.html  objects.inv
py-modindex/: index.html
quickstart/: index.html
search/: index.html
test/: conftest.py  example.py  test_daft.py  test_examples.py
(+38 files in other folders)
